# qt-homeworks

./: README.md
01/: readme.md
02/: Readme.md
03/: Readme.md  readme.md
03/03_DZ/: CMakeLists.txt  mainwindow.ui
03_new/: ReadMe.md
04/: Readme.md
05/: readme.md
05/SignalSlot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  signalcollect.cpp  signalcollect.h
06/: Readme.md
06/06_ExampConcurr/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
06/PreConcurrent/: CMakeLists.txt  ExampleRace.cpp  ExampleRace.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
07/: readme.md
07/07_GraphicsCharts/: CMakeLists.txt  graphicchart.cpp  graphicchart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
07/07_GraphicsCustomPlot/: CMakeLists.txt  graphic.cpp  graphic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
07/PreGraphic/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
08/: Readme.md
08/08_DataBaseLect/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
08/08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.ui  mainwindow.cpp  mainwindow.h
08/PreDataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
09/: Readme.md
09/09_UDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  udpworker.cpp  udpworker.h
09/PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  udpworker.cpp  udpworker.h
09/UDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
10/: Readme.md
10/10_TCPserver_Source/: CMakeLists.txt  main.cpp  structs.h  tcpserver.cpp  tcpserver.h
10/PreTCPclient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structs.h  tcpclient.cpp  tcpclient.h
10/TCPServer_exe/: 10_TCPserver.exe_
